force-app/main/default/objects/leaseworks__Pandemic_Info__c/leaseworks__Pandemic_Info__c.object-meta.xml
<CustomObject>
    <description>[MODULE: NA]
[LOAD: No]
[PREREQUISITES: NA]
[REPLACEMENT OBJECT API: NA]
[COMMENTS: NA]</description>
    <label>Pandemic Info</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pandemic Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>