force-app/main/default/objects/leaseworks__Pandemic_Info__c/fields/leaseworks__Data_As_Of__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Data_As_Of__c</fullName>
    <label>Data As Of</label>
    <required>true</required>
    <type>Date</type>
</CustomField>