force-app/main/default/objects/leaseworks__Pandemic_Info__c/fields/leaseworks__New_Cases__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__New_Cases__c</fullName>
    <label>New Cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>