force-app/main/default/objects/leaseworks__Pandemic_Info__c/fields/leaseworks__Total_Deaths__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Total_Deaths__c</fullName>
    <label>Total Deaths</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>